@@ -7,6 +7,7 @@ New features:
 ..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)
 
 Bug fixes:
+.......PS. [ZBX-12854] fixed crash of VMware collector with DebugLog=4 (gleb)
 ........S. [ZBX-12903] added floating value range validation for metrics calculated by server (wiper)
 ..F....... [ZBX-12904] added validation for groupid and hostid parameters in dashboard view (vmurzins)
 A......... [ZBX-12837] fixed error in action update when changing media type (gcalenko)
@@ -367,6 +368,7 @@ New features:
 ..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)
 
 Bug fixes:
+.......PS. [ZBX-12854] fixed crash of VMware collector with DebugLog=4 (gleb)
 ...G...... [ZBX-11902] fixed CPU count for LPAR partitions in IBM AIX (abs)
 ...G...... [ZBX-12260] fixed windows agent to support UTF-16LE, UCS-2, UCS-2LE encodings (vso)
 ..F....... [ZBX-6669] fixed use of current host as filter when selecting items for graph forms and trigger forms (gcalenko)
@@ -903,6 +905,7 @@ New features:
 ..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)
 
 Bug fixes:
+.......PS. [ZBX-12854] fixed crash of VMware collector with DebugLog=4 (gleb)
 ...G...... [ZBX-11902] fixed CPU count for LPAR partitions in IBM AIX (abs)
 ...G...... [ZBX-12260] fixed windows agent to support UTF-16LE, UCS-2, UCS-2LE encodings (vso)
 ..F....... [ZBX-12722] fixed scrollbar causing a JS error in "500 latest values" page due to unnecessarily initialization (Ivo)
@@ -2689,6 +2692,7 @@ Changes for 2.2.21rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-12854] fixed crash of VMware collector with DebugLog=4 (gleb)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.20
